[tool.poetry]
name = "dialogue_act_classification"
version = "0.1.0"
description = ""
authors = ["chris <chris.schaller@posteo.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
python_speech_features = "^0.6"
torch = "^1.8.1"
scipy = "^1.6.3"
pytorch-lightning = "^1.3.5"
sklearn = "^0.0"
transformers = "^4.6.1"
pandas = "^1.2.4"
torchtext = "^0.10.0"

[tool.poetry.dev-dependencies]
ipykernel = "^5.5.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
